--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width = device-width, initial-scale = 1">
   <title>Pocket Money</title>
   <link rel="stylesheet" type='text/css' href="/dist/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
